fixed video layout on mobile.

--- a/code/scss/custom/elements/_header.scss
+++ b/code/scss/custom/elements/_header.scss
@@ -13,6 +13,9 @@
     video {
         position: absolute;
         z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     p {
